# plotter-cli

./: .gitignore  MANIFEST.in  README.md  main.py  pyproject.toml  requirements.txt  settings.yaml  setup.py
cli/: .vpype.toml  __init__.py  commands.py  utils.py
plotter_cli/: .vpype.toml  __init__.py  commands.py  settings.yaml  utils.py
